--- a/Django/flipkart/electronics/templates/electronics/home.html
+++ b/Django/flipkart/electronics/templates/electronics/home.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>home</h1>
+    <a href="{% url 'electronics/product' %}">
+        <button>Products</button>
+    </a>
 </body>
 </html>
